--- a/src/components/Loader/Loader.module.css
+++ b/src/components/Loader/Loader.module.css
@@ -1,14 +1,11 @@
-.card {
-  border-radius: var(--main-border-radius);
+.box {
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.box {
-  border-radius: var(--main-border-radius);
-  -webkit-box-shadow: 0 0 70px -10px rgba(0, 0, 0, 0.2);
-  box-shadow: 0 0 70px -10px rgba(0, 0, 0, 0.2);
-  background-color: var(--bg-color--card);
-  color: var(--main-text-color);
-  width: 85%;
-  max-width: 675px;
-  min-height: 300px;
+.box svg path,
+.box svg rect {
+    fill: #65b6ee;
 }
